Update session selection logic, replace stars with fish, lighter background

--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #e6f3fa;
+            background-color: #eef8ff; /* Светлее голубой фон */
         }
         h1, h2 {
             text-align: center;
