Replace fish with circles, add admin login, remove admin link, beach background

--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #eef8ff; /* Светлее голубой фон */
+            background: linear-gradient(to bottom, #ffeb3b, #4fc3f7); /* Солнечный пляж */
         }
         h1, h2 {
             text-align: center;
@@ -54,28 +54,70 @@
         li {
             margin: 10px 0;
             padding: 10px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.8);
             border: 1px solid #ccc;
             border-radius: 5px;
+        }
+        .auth-form {
+            text-align: center;
+            margin-top: 50px;
+        }
+        .auth-form.hidden {
+            display: none;
+        }
+        .content.hidden {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <h1>LVG Kino - Админ-панель</h1>
-    <h2>Добавить сеанс</h2>
-    <form id="session-form">
-        <label for="movie">Фильм:</label>
-        <input type="text" id="movie" required>
-        <label for="date">Дата:</label>
-        <input type="date" id="date" required>
-        <label for="time">Время:</label>
-        <input type="time" id="time" required>
-        <button type="submit">Добавить</button>
-    </form>
-    <h2>Сеансы и брони</h2>
-    <ul id="sessions"></ul>
+    <div id="auth-form" class="auth-form">
+        <h2>Вход в админ-панель</h2>
+        <form id="login-form">
+            <label for="login">Логин:</label>
+            <input type="text" id="login" required>
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" required>
+            <button type="submit">Войти</button>
+        </form>
+        <div id="auth-message" style="color: red; margin-top: 10px;"></div>
+    </div>
+    <div id="content" class="content hidden">
+        <h1>LVG Kino - Админ-панель</h1>
+        <h2>Добавить сеанс</h2>
+        <form id="session-form">
+            <label for="movie">Фильм:</label>
+            <input type="text" id="movie" required>
+            <label for="date">Дата:</label>
+            <input type="date" id="date" required>
+            <label for="time">Время:</label>
+            <input type="time" id="time" required>
+            <button type="submit">Добавить</button>
+        </form>
+        <h2>Сеансы и брони</h2>
+        <ul id="sessions"></ul>
+    </div>
 
     <script>
+        // Авторизация
+        const loginForm = document.getElementById('login-form');
+        const authForm = document.getElementById('auth-form');
+        const content = document.getElementById('content');
+        const authMessage = document.getElementById('auth-message');
+
+        loginForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const login = document.getElementById('login').value;
+            const password = document.getElementById('password').value;
+            if (login === 'admin' && password === 'password') {
+                authForm.classList.add('hidden');
+                content.classList.remove('hidden');
+                renderSessions();
+            } else {
+                authMessage.textContent = 'Неверный логин или пароль';
+            }
+        });
+
         // Загрузка сеансов
         let sessions = JSON.parse(localStorage.getItem('sessions') || '[]');
         const sessionsList = document.getElementById('sessions');
@@ -119,9 +161,6 @@
                 renderSessions();
             }
         });
-
-        // Инициализация
-        renderSessions();
     </script>
 </body>
 </html>
